src/main/java/edu/kit/iti/formal/stvs/model/expressions/parser/CellExpressionParser.java
package edu.kit.iti.formal.stvs.model.expressions.parser;// Generated from /home/philipp/program/PSE/stverificationstudio/CellExpression.g4 by ANTLR 4.6


import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CellExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, AND=2, ARROW_RIGHT=3, COMMA=4, DIV=5, EQUALS=6, GREATER_EQUALS=7, 
		GREATER_THAN=8, LBRACKET=9, LESS_EQUALS=10, LESS_THAN=11, LPAREN=12, MINUS=13, 
		MOD=14, MULT=15, NOT=16, NOT_EQUALS=17, OR=18, PLUS=19, POWER=20, RBRACKET=21, 
		RPAREN=22, XOR=23, IF=24, FI=25, ELSE=26, GUARD=27, T=28, F=29, IDENTIFIER=30, 
		FLOAT=31, INTEGER=32, WS=33;
	public static final int
		RULE_cell = 0, RULE_chunk = 1, RULE_dontcare = 2, RULE_constant = 3, RULE_singlesided = 4, 
		RULE_interval = 5, RULE_relational_operator = 6, RULE_expr = 7, RULE_variable = 8, 
		RULE_guardedcommand = 9, RULE_fixed_interval = 10;
	public static final String[] ruleNames = {
		"cell", "chunk", "dontcare", "constant", "singlesided", "interval", "relational_operator", 
		"expr", "variable", "guardedcommand", "fixed_interval"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'->'", null, "'=>'", "','", "'/'", "'='", "'>='", "'>'", "'['", 
		"'<='", "'<'", "'('", "'-'", null, "'*'", null, null, null, "'+'", "'**'", 
		"']'", "')'", null, "'if'", "'fi'", "'else'", "'::'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "AND", "ARROW_RIGHT", "COMMA", "DIV", "EQUALS", "GREATER_EQUALS", 
		"GREATER_THAN", "LBRACKET", "LESS_EQUALS", "LESS_THAN", "LPAREN", "MINUS", 
		"MOD", "MULT", "NOT", "NOT_EQUALS", "OR", "PLUS", "POWER", "RBRACKET", 
		"RPAREN", "XOR", "IF", "FI", "ELSE", "GUARD", "T", "F", "IDENTIFIER", 
		"FLOAT", "INTEGER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CellExpression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CellExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CellContext extends ParserRuleContext {
		public List<ChunkContext> chunk() {
			return getRuleContexts(ChunkContext.class);
		}
		public ChunkContext chunk(int i) {
			return getRuleContext(ChunkContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CellExpressionParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CellExpressionParser.COMMA, i);
		}
		public CellContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cell; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterCell(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitCell(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitCell(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CellContext cell() throws RecognitionException {
		CellContext _localctx = new CellContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_cell);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			chunk();
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(23);
				match(COMMA);
				setState(24);
				chunk();
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChunkContext extends ParserRuleContext {
		public DontcareContext dontcare() {
			return getRuleContext(DontcareContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public SinglesidedContext singlesided() {
			return getRuleContext(SinglesidedContext.class,0);
		}
		public IntervalContext interval() {
			return getRuleContext(IntervalContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterChunk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitChunk(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_chunk);
		try {
			setState(36);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				dontcare();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(31);
				variable();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(32);
				constant();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(33);
				singlesided();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(34);
				interval();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(35);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DontcareContext extends ParserRuleContext {
		public DontcareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dontcare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterDontcare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitDontcare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitDontcare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DontcareContext dontcare() throws RecognitionException {
		DontcareContext _localctx = new DontcareContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dontcare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(MINUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public Token a;
		public TerminalNode INTEGER() { return getToken(CellExpressionParser.INTEGER, 0); }
		public TerminalNode T() { return getToken(CellExpressionParser.T, 0); }
		public TerminalNode F() { return getToken(CellExpressionParser.F, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitConstant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			((ConstantContext)_localctx).a = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T) | (1L << F) | (1L << INTEGER))) != 0)) ) {
				((ConstantContext)_localctx).a = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SinglesidedContext extends ParserRuleContext {
		public Relational_operatorContext op;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Relational_operatorContext relational_operator() {
			return getRuleContext(Relational_operatorContext.class,0);
		}
		public SinglesidedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singlesided; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterSinglesided(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitSinglesided(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitSinglesided(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SinglesidedContext singlesided() throws RecognitionException {
		SinglesidedContext _localctx = new SinglesidedContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_singlesided);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			((SinglesidedContext)_localctx).op = relational_operator();
			setState(43);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntervalContext extends ParserRuleContext {
		public ExprContext lower;
		public ExprContext upper;
		public TerminalNode LBRACKET() { return getToken(CellExpressionParser.LBRACKET, 0); }
		public TerminalNode COMMA() { return getToken(CellExpressionParser.COMMA, 0); }
		public TerminalNode RBRACKET() { return getToken(CellExpressionParser.RBRACKET, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public IntervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterInterval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitInterval(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitInterval(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntervalContext interval() throws RecognitionException {
		IntervalContext _localctx = new IntervalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_interval);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(LBRACKET);
			setState(46);
			((IntervalContext)_localctx).lower = expr(0);
			setState(47);
			match(COMMA);
			setState(48);
			((IntervalContext)_localctx).upper = expr(0);
			setState(49);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Relational_operatorContext extends ParserRuleContext {
		public TerminalNode GREATER_THAN() { return getToken(CellExpressionParser.GREATER_THAN, 0); }
		public TerminalNode GREATER_EQUALS() { return getToken(CellExpressionParser.GREATER_EQUALS, 0); }
		public TerminalNode LESS_THAN() { return getToken(CellExpressionParser.LESS_THAN, 0); }
		public TerminalNode LESS_EQUALS() { return getToken(CellExpressionParser.LESS_EQUALS, 0); }
		public TerminalNode EQUALS() { return getToken(CellExpressionParser.EQUALS, 0); }
		public TerminalNode NOT_EQUALS() { return getToken(CellExpressionParser.NOT_EQUALS, 0); }
		public Relational_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relational_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterRelational_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitRelational_operator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitRelational_operator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Relational_operatorContext relational_operator() throws RecognitionException {
		Relational_operatorContext _localctx = new Relational_operatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_relational_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUALS) | (1L << GREATER_EQUALS) | (1L << GREATER_THAN) | (1L << LESS_EQUALS) | (1L << LESS_THAN) | (1L << NOT_EQUALS))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MinusContext extends ExprContext {
		public ExprContext sub;
		public TerminalNode MINUS() { return getToken(CellExpressionParser.MINUS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MinusContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitMinus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitMinus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NegationContext extends ExprContext {
		public ExprContext sub;
		public TerminalNode NOT() { return getToken(CellExpressionParser.NOT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NegationContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterNegation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitNegation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitNegation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParensContext extends ExprContext {
		public ExprContext sub;
		public TerminalNode LPAREN() { return getToken(CellExpressionParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CellExpressionParser.RPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParensContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterParens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitParens(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitParens(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompareContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode LESS_THAN() { return getToken(CellExpressionParser.LESS_THAN, 0); }
		public TerminalNode GREATER_THAN() { return getToken(CellExpressionParser.GREATER_THAN, 0); }
		public TerminalNode GREATER_EQUALS() { return getToken(CellExpressionParser.GREATER_EQUALS, 0); }
		public TerminalNode LESS_EQUALS() { return getToken(CellExpressionParser.LESS_EQUALS, 0); }
		public CompareContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterCompare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitCompare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitCompare(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ModContext extends ExprContext {
		public ExprContext left;
		public ExprContext right;
		public TerminalNode MOD() { return getToken(CellExpressionParser.MOD, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ModContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterMod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitMod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitMod(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultContext extends ExprContext {
		public ExprContext left;
		public ExprContext right;
		public TerminalNode MULT() { return getToken(CellExpressionParser.MULT, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MultContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterMult(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitMult(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitMult(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinguardedCommandContext extends ExprContext {
		public GuardedcommandContext guardedcommand() {
			return getRuleContext(GuardedcommandContext.class,0);
		}
		public BinguardedCommandContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterBinguardedCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitBinguardedCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitBinguardedCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctioncallContext extends ExprContext {
		public Token n;
		public TerminalNode LPAREN() { return getToken(CellExpressionParser.LPAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(CellExpressionParser.RPAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(CellExpressionParser.IDENTIFIER, 0); }
		public List<TerminalNode> COMMA() { return getTokens(CellExpressionParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CellExpressionParser.COMMA, i);
		}
		public FunctioncallContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterFunctioncall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitFunctioncall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitFunctioncall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BvariableContext extends ExprContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public BvariableContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterBvariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitBvariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitBvariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalAndContext extends ExprContext {
		public ExprContext left;
		public ExprContext right;
		public TerminalNode AND() { return getToken(CellExpressionParser.AND, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public LogicalAndContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterLogicalAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitLogicalAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitLogicalAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlusContext extends ExprContext {
		public ExprContext left;
		public ExprContext right;
		public TerminalNode PLUS() { return getToken(CellExpressionParser.PLUS, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public PlusContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitPlus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitPlus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DivContext extends ExprContext {
		public ExprContext left;
		public ExprContext right;
		public TerminalNode DIV() { return getToken(CellExpressionParser.DIV, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public DivContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).enterDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CellExpressionListener ) ((CellExpressionListener)listener).exitDiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CellExpressionVisitor ) return ((CellExpressionVisitor<? extends T>)visitor).visitDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InequalityContext extends ExprContext {
		public ExprContext left;
